# kp-dagger

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  main.py  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  device_support.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: copilot-documentation-instructions.md  index.md
docs/architecture/: PROJECT_STRUCTURE.md  data-models.md  database-design.md  dependency-injection.md  overview.md  protocols-vs-abcs.md  ui-service-communication.md
docs/architecture/ui-service-communication/: benefits-and-design.md  event-bus-pattern.md  index.md  memory-management.md  progress-callbacks.md  testing-patterns.md  workflow-orchestration.md
docs/development/: GITHUB_ISSUES.md  ROADMAP.md  contributing.md
docs/getting-started/: first-analysis.md  index.md  installation.md  quickstart.md
docs/implementation/: DEPENDENCY_INJECTION_IMPLEMENTATION.md
docs/security/: encryption-design.md  implementation-summary.md
examples/: __init__.py  cli_demo.py  config.example.yml  test_rich_help.py
scripts/: create-github-issues.ps1  create-github-labels.ps1  create-github-milestones.ps1  setup-github-project.ps1  test_basic_functionality.py
src/kp_dagger/: __init__.py  __main__.py
src/kp_dagger/api_clients/: cve_details.py  endoflife.py
src/kp_dagger/cli/: README.md  __init__.py  main.py
src/kp_dagger/cli/commands/: __init__.py  analyze.py  report.py  tenant.py
src/kp_dagger/cli/utils/: __init__.py  config.py  helpers.py  output.py
src/kp_dagger/containers/: __init__.py  analyzers.py  api_clients.py  application.py  config.py  core.py  parsers.py  reports.py
src/kp_dagger/core/: __init__.py  database.py  encryption.py  exceptions.py  scanner.py
src/kp_dagger/models/base/: __init__.py  base.py  encryption.py  tenant.py
src/kp_dagger/models/normalized/: __init__.py  device.py  ip_address.py
src/kp_dagger/parsers/: factory.py
src/kp_dagger/parsers/cisco_asa/: parser.py
src/kp_dagger/parsers/cisco_ios/: parser.py
src/kp_dagger/parsers/fortigate/: parser.py
src/kp_dagger/parsers/paloalto/: parser.py
src/kp_dagger/utils/: get_file_encoding.py  get_timestamp.py  hash_generator.py  logging.py
src/network_security_scanner/: __init__.py
src/network_security_scanner/api_clients/: cve_details.py  endoflife.py
src/network_security_scanner/cli/: __init__.py  main.py  utils.py
src/network_security_scanner/cli/commands/: config.py  scan.py
src/network_security_scanner/core/: __init__.py  config.py  database.py  exceptions.py  normalizer.py  scanner.py
src/network_security_scanner/models/normalized/: device.py
src/network_security_scanner/parsers/: factory.py
src/network_security_scanner/parsers/cisco_asa/: parser.py
src/network_security_scanner/parsers/cisco_ios/: parser.py
src/network_security_scanner/parsers/fortigate/: parser.py
src/network_security_scanner/parsers/paloalto/: parser.py
src/network_security_scanner/utils/: logging.py
src/pybastion/: __init__.py  __main__.py
src/pybastion/cli/: __init__.py  main.py  options.py
src/pybastion/cli/commands/: __init__.py  analyze.py  report.py  scan.py  tenant.py  validate.py
src/pybastion/cli/utils/: __init__.py  config.py  helpers.py  output.py
src/pybastion/containers/: __init__.py  api_clients.py  application.py  config.py  core.py  parsers.py  reports.py
src/pybastion/core/: __init__.py  database.py  encryption.py  exceptions.py  scanner.py
src/pybastion/models/base/: __init__.py  base.py  customer.py  encryption.py  enums.py  tenant.py
src/pybastion/models/normalized/: __init__.py  device.py  ip_address.py
src/pybastion/utils/: get_timestamp.py
tests/: __init__.py  conftest.py  test_di_basic.py  test_tenant_changes.py
tests/fixtures/configs/: sample_configs.py
tests/integration/: __init__.py  test_dependency_injection.py
tests/unit/: __init__.py  test_containers.py
tests/unit/core/: __init__.py  test_encryption.py  test_scanner.py
tests/unit/models/: test_encrypted_field.py
tests/unit/parsers/: test_base_parser.py
